# Espressif_Brazil_Summit_2025

./: README.md
example2_arduino_libraries_in_action/components/Adafruit_SHTC3/: Adafruit_SHTC3.cpp  Adafruit_SHTC3.h  CMakeLists.txt  README.md  library.properties
example2_arduino_libraries_in_action/components/Adafruit_SHTC3/examples/SHTC3test/: SHTC3test.ino
example2_arduino_libraries_in_action/components/ICM42670P/: CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  keywords.txt  library.properties
example2_arduino_libraries_in_action/components/ICM42670P/examples/APEX_Pedometer/: APEX_Pedometer.ino
example2_arduino_libraries_in_action/components/ICM42670P/examples/APEX_PedometerAndTilt/: APEX_PedometerAndTilt.ino
example2_arduino_libraries_in_action/components/ICM42670P/examples/APEX_Tilt/: APEX_Tilt.ino
example2_arduino_libraries_in_action/components/ICM42670P/examples/APEX_WakeOnMotion/: APEX_WakeOnMotion.ino
example2_arduino_libraries_in_action/components/ICM42670P/examples/FIFO_Interrupt/: FIFO_Interrupt.ino
example2_arduino_libraries_in_action/components/ICM42670P/examples/MicroROS_Publisher/: MicroROS_Publisher.ino  MicroROS_README.md
example2_arduino_libraries_in_action/components/ICM42670P/examples/Polling_I2C/: Polling_I2C.ino
example2_arduino_libraries_in_action/components/ICM42670P/examples/Polling_SPI/: Polling_SPI.ino
example2_arduino_libraries_in_action/components/ICM42670P/src/: ICM42670P.cpp  ICM42670P.h  inv_time.c
example2_arduino_libraries_in_action/components/ICM42670P/src/Invn/: InvError.h
(+29 files in other folders)
